# jocic

./: readme.md
doodles/2023/adc-to-wav/: CMakeLists.txt  main.cpp
doodles/2023/audio-sampling/: CMakeLists.txt
doodles/2023/audio-sampling/lib/petit-fatfs/: diskio.c  diskio.h
doodles/2023/audio-sampling/src/: main.cpp
doodles/2023/basic-blotter-bench/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
doodles/2023/basic-plotter/: CMakeLists.txt  basic_plot.cpp  basic_plot.h  mainwindow.cpp  mainwindow.ui
doodles/2023/basic-plotter-bench/: CMakeLists.txt  mainwindow.cpp
doodles/2023/bluetooth-serial/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
doodles/2023/circular-queue/: CMakeLists.txt  main.c
doodles/2023/cpp-singleton/: CMakeLists.txt  main.cpp  singleton.cpp  singleton.h
doodles/2023/css-particles-1/: index.html  style.css  style.scss
doodles/2023/css-sexy-background/: index.html  styles.css
doodles/2023/fatfs/: CMakeLists.txt
doodles/2023/fatfs-test/: CMakeLists.txt
doodles/2023/fatfs-test/lib/: diskio.c
doodles/2023/fatfs-test/src/: main.cpp
doodles/2023/fatfs/lib/: diskio.c
doodles/2023/fatfs/src/: main.cpp
doodles/2023/freecodecamp/responsive-web-design/5-photo-gallery/: index.html
doodles/2023/int-data-type/: CMakeLists.txt
doodles/2023/int-data-types/: CMakeLists.txt  main.cpp
doodles/2023/microphone-access/: .gitignore  CMakeLists.txt
doodles/2023/microphone-access/src/: main.cpp
doodles/2023/petit-fatfs/: CMakeLists.txt
doodles/2023/petit-fatfs-test/: CMakeLists.txt
doodles/2023/petit-fatfs-test/lib/: diskio.c
doodles/2023/petit-fatfs/assets/: floppy.img
doodles/2023/petit-fatfs/lib/: diskio.c  pffconf.h
doodles/2023/petit-fatfs/src/: main.c
doodles/2023/qml-checkbox/: CMakeLists.txt  TestClass.h  main.cpp  main.qml
doodles/2023/qml-two-axis-control/: CMakeLists.txt  main.cpp  main.qml
doodles/2023/qt-chart/: CMakeLists.txt  mainwindow.cpp
doodles/2023/qt-chart-pt-counter/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
doodles/2023/qt-customplot/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
doodles/2023/qt-draw/: CMakeLists.txt  canvas.cpp  canvas.h  mainwindow.cpp
doodles/2023/qt-playback/: CMakeLists.txt  main.cpp
doodles/2023/qt-timeline/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  timeline.cpp  timeline.h
doodles/2023/qt-timers/: CMakeLists.txt  events.cpp  events.h  main.cpp
doodles/2023/scope-triggering/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
doodles/2023/wav-playback/: CMakeLists.txt  main.cpp
doodles/2023/white-noise-generator/: CMakeLists.txt  main.cpp  noise_source.cpp  noise_source.h
doodles/2023/win-socket/: CMakeLists.txt  client.cpp  server.cpp
other/docker-templates/: laravel-plain  mariadb-plain
other/dsa/kaden-algo/: CMakeLists.txt  main.cpp
other/dsa/khan-algo/: CMakeLists.txt  main.cpp
other/dsa/merge-sort/: CMakeLists.txt  main.cpp
other/dsa/quick-sort/: CMakeLists.txt  main.cpp
other/dsa/selection-sort/: CMakeLists.txt  main.cpp
other/dummy-data/: book-excerpts.txt  book-publishers.txt  fashion-brands.txt
other/problems/best-sum/: main.cpp  main.h
other/problems/can-sum/: main.cpp  main.h
other/problems/fib/: main.cpp  main.h
other/problems/grid-traveler/: main.cpp  main.h
other/problems/how-sum/: main.cpp  main.h
other/sagreras-method/: readme.md
other/sagreras-method/book-1/lesson-1/: tablature.tg
other/sagreras-method/book-1/lesson-10/: tablature.tg
other/sagreras-method/book-1/lesson-11/: tablature.tg
other/sagreras-method/book-1/lesson-12/: tablature.tg
other/sagreras-method/book-1/lesson-13/: tablature.tg
other/sagreras-method/book-1/lesson-14/: tablature.tg
other/sagreras-method/book-1/lesson-15/: tablature.tg
other/sagreras-method/book-1/lesson-16/: tablature.tg
other/sagreras-method/book-1/lesson-17/: tablature.tg
other/sagreras-method/book-1/lesson-18/: tablature.tg
other/sagreras-method/book-1/lesson-19/: tablature.tg
other/sagreras-method/book-1/lesson-2/: tablature.tg
other/sagreras-method/book-1/lesson-20/: tablature.tg
other/sagreras-method/book-1/lesson-21/: tablature.tg
other/sagreras-method/book-1/lesson-22/: tablature.tg
other/sagreras-method/book-1/lesson-23/: tablature.tg
other/sagreras-method/book-1/lesson-24/: tablature.tg
other/sagreras-method/book-1/lesson-25/: tablature.tg
other/sagreras-method/book-1/lesson-26/: tablature.tg
other/sagreras-method/book-1/lesson-27/: tablature.tg
other/sagreras-method/book-1/lesson-28/: tablature.tg
other/sagreras-method/book-1/lesson-29/: tablature.tg
other/sagreras-method/book-1/lesson-3/: tablature.tg
other/sagreras-method/book-1/lesson-30/: tablature.tg
other/sagreras-method/book-1/lesson-4/: tablature.tg
other/sagreras-method/book-1/lesson-5/: tablature.tg
other/sagreras-method/book-1/lesson-6/: tablature.tg
other/sagreras-method/book-1/lesson-7/: tablature.tg
other/sagreras-method/book-1/lesson-8/: tablature.tg
other/sagreras-method/book-1/lesson-9/: tablature.tg
projects/personal/2016/parallax/: gulpfile.js  package-lock.json  package.json  readme.md  to-do.md
projects/personal/2016/parallax/demo/: index.html
projects/personal/2020/tor2web/: readme.md
projects/personal/2020/tor2web/source/: tor2web.sh
projects/personal/adc-converter/: CMakeLists.txt  data_control.cpp  data_control.h  data_receiver.cpp  data_receiver.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  scope_data_types.h  scope_widget.cpp  scope_widget.h
projects/school/2011/diamond-chat/: demo-database.sql  installation-guide.txt
projects/school/2011/diamond-chat/src/: chat.php  index.php  log-in.php  message.css  messages.php  profile.php  registration.php  style.css
projects/school/2014/easy-sql/: readme.md
projects/school/2014/easy-sql/src/: easysql_core_files.php
projects/showcase/2023/fcc-survey-form/: index.html  styles.css
projects/showcase/2023/fcc-tribute-page/src/: index.html  styles.css
projects/showcase/2023/figma-conversion-1/src/: index.html
(+221 files in other folders)
